# hive

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hive.py  install_skills.py  pyproject.toml  release.py
.claude-plugin/: plugin.json
agents/: aurora-product-designer.md  centinela-test-automation-expert.md  flux-automation-specialist.md  hermes-deployment-specialist.md  kokoro-backend-specialist.md  lumen-seo-specialist.md  oraculo-research-specialist.md  pixel-frontend-specialist.md  pregon-marketing-specialist.md  sentinela-test-automation-expert.md  skills.sh.md
docs/: ENV_VARIABLES.md  MEDIA_GENERATION.md  SECURITY.md
packs/: anthropic.json  communication.json  core.json  devops.json  gemini.json  google.json  marketing.json  media.json  n8n.json  stitch.json  tools.json
scripts/: __init__.py  accommodation_search.py  auto-qa-check.sh  binance_handler.py  cerebras_handler.sh  deepseek_handler.sh  fal_handler.py  fireworks_handler.sh  gate_handler.py  gemini_handler.sh  generate_audio.py  generate_image.py  gmail_handler.py  google_calendar_handler.py  google_docs_handler.py  google_drive_handler.py  google_handler.sh  groq_handler.sh  instagram_handler.py  invoke_forge.py  invoke_forge.sh  invoke_mycelium.py  invoke_mycelium.sh  meta_ads_handler.py  monitor.py  openai_handler.sh  openrouter_handler.sh  perplexity_handler.py  perplexity_handler.sh  pre-commit-secrets.sh  review_pr.sh  router.sh  slack_handler.py  supabase_sync.sh  telegram_sketch_bot.py  transcript_handler.py  whatsapp_handler.py  (+1 more)
(+120 files in other folders)
